Add LGTM telemetry